some fixes to deal with comments and display-math

--- a/latexbreak.config
+++ b/latexbreak.config
@@ -1,7 +1,7 @@
 # \[ is an escaped opening square bracket. So occurrences of "\[" (start of display math) in the document are considered to be occurrences of the "macro" [.
-break_around_macro:             begin, end, \[, \], newpage, pagebreak, noindent, medskip, smallskip, bigskip
+break_around_macro:             begin, end, \[, \], newpage, pagebreak, noindent, medskip, smallskip, bigskip, part\*?, section\*?, subsection\*?, subsubsection\*?, paragraph\*?
 # \ is an escaped backslash. So occurrences of "\\" (linebreak) in the document are considered to be occurrences of the "macro" \.
-break_after_macro:              newline, linebreak, \\, part, section, subsection, subsubsection, paragraph, label
+break_after_macro:              newline, linebreak, \\, label
 break_before_macro:             item
 remove_newlines:                true
 break_after_sentences:          true
